--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
   <footer class=" bg-dark">
     <h4 class="text-center text-white pt-3">Footer</h4>
-    <nav class="navbar navbar-expand-lg bg-light">
+    <nav class="navbar navbar-expand bg-light">
       <div class="container-fluid">
 
         <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
