--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 
 <body>
 <!---------------------------------------------------Nav Bar--------------------------------------------------  -->
-  <div class=" bg-light">
+  <div class=" bg-dark mb-2">
     <section class="container">
-      <nav class="navbar navbar-expand-lg bg-light">
+      <nav class="navbar navbar-expand-lg bg-dark">
         <div class="container-fluid">
           <a class="navbar-brand" href="#"><img class="logo rounded-circle" src="download.png"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -29,25 +29,25 @@
           <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active text-white" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">About Us</a>
+                <a class="nav-link text-white href="#">About Us</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Contact</a>
+                <a class="nav-link text-white" href="#">Contact</a>
               </li>
              
             </ul>
           </div>
         </div>
       </nav>
+    </section>
+  </div>
 
 <!-- -------------------------------------------------nav bar end---------------------------------------------- -->
 <!-- -------------------------------------------------slider---------------------------------------------- -->
-
-    </section>
-  </div>
+<div class="container">
   <section>
     <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
       <div class="carousel-indicators">
@@ -86,6 +86,7 @@
       </button>
     </div>
   </section>
+  </div>
   <!-- ----------------------------------------------slider end----------------------------------------- -->
   <!-- ---------------------------------------------body content--------------------------------------------- -->
   <section class=" mt-5 mb-5">
